# flexpect

./: Cargo.toml  LICENSE  README.md  output.txt
.github/workflows/: ci.yml
examples/: simple.rs
src/: lib.rs
tests/: check-expect-ignored-simple.out  check-expect-supported-simple.out  check-expect-supported-submod.out  check-expect-supported.out  clippy-expect-supported-simple.out  clippy-expect-supported-submod.out  clippy-expect-supported.out  compare-output.sh  simple.rs  submod.rs  update-expect-ignored.sh  update-expected.sh
